[metadata]
name = InspectionPoints
description = Debugging tool for UR Cobots
author = Thor Malmby Jørgin, Tobias Bak, Kevin Torp, Rasmus Christiansen
platforms = win32, unix, linux
classifiers =
    Programming Language :: Python :: 3.12

[options]
packages =
    custom_logging
    RobotControl
    undo
python_requires = >=3.12
package_dir =
    =.
zip_safe = no